# shuohua

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.en.md  README.md  RELEASE.md  REQUIREMENTS.md  build.rs  release.toml
.cargo/: config.toml
.github/: dependabot.yml  release-body.md
.github/workflows/: ci.yml  release.yml
assets/config/: main.toml  manifest.toml
assets/config/post/llm/: anthropic.toml  custom-anthropic.toml  custom-openai.toml  deepseek.toml  openai.toml
assets/config/post/rule/: zh_filter.toml
assets/config/profile/: default.toml
assets/i18n/: en-US.toml  zh-CN.toml
assets/icon/: README.md  render.sh
assets/icon/macos/: shuohua.icns
assets/themes/: catppuccin-latte.toml  catppuccin-mocha.toml  dracula.toml  everforest-dark.toml  everforest-light.toml  gruvbox-dark.toml  gruvbox-light.toml  nord.toml  rose-pine-dawn.toml  rose-pine.toml  solarized-dark.toml  solarized-light.toml  tokyo-day.toml  tokyo-night.toml
build_support/: apple_helper.rs  themes.rs
docs/: CLI.md  CONFIGURE_ARCHITECTURE.md  DESIGN.md  M10.md  MODULES.md  RELEASE.md  RELEASE_HARDENING.md  SCHEMA.md  TODO.md  TUI_PLAN.md  architecture.md  cli.md  debug.md  release.md  schema.md
docs/archive/: M10.md  M10_PLAN.md  README.md  TODO.md  audio-processing.md
docs/archive/superpowers/plans/: 2026-06-16-history-v2.md  2026-06-16-overlay-ui-polish.md  2026-06-16-tracing-logging-history.md  2026-06-17-configure-diagnostics-repair.md  2026-06-17-configure-refactor-roadmap.md  2026-06-18-config-field-descriptions.md
docs/archive/superpowers/specs/: 2026-06-16-m10-multi-session-asr-research.md
docs/cross-platform/: README.md  app-data.md  audio-processing.md  config-theme.md  development-plan.md  gui.md  handoff.md  ipc-service.md  macos-baseline.md  overlay.md  overview.md  platform-capabilities.md  windows-local-dev.md  windows-runtime-validation.md  windows.md
docs/modules/: apple_backend.md  asr.md  config.md  hotkey.md  overlay.md  post.md  voice.md  webrtc_backend.md
docs/ops/: release-hardening.md  release.md
docs/superpowers/specs/: 2026-06-15-m8-whisper-cpp-provider-design.md  2026-06-15-multi-session-asr-and-history-v2-design.md
examples/config/: config.toml
examples/config/asr/: doubao.toml
gui-dist/: index.html
m0-glass-reference/: Cargo.toml  tile-all.sh
m0-glass-reference/src/: main.rs
scripts/: windows-ipc-smoke.ps1
src/: app_profile.rs  autotype_darwin.rs  client_api.rs  config.rs  daemon.rs  focused_window_darwin.rs  install.rs  lib.rs  log.rs  main.rs  paths.rs  profile.rs  reload.rs  text_stats.rs  trash.rs  windows_identity.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: gui.toml
src-tauri/src/: lib.rs  main.rs
src/asr/: fake.rs  mod.rs  types.rs
src/asr/providers/: aliyun.rs  apple.rs  apple_helper.swift  doubao.rs  mod.rs  tencent.rs
src/cli/: completions.rs  config_template.rs  doctor.rs  mod.rs  report.rs  service.rs  vad_probe.rs
src/cli/app/: archive.rs  mod.rs  release.rs  update.rs  version.rs
src/cli/app/platform/: macos.rs  mod.rs  unsupported.rs
src/cli/service/: macos.rs  mod.rs  unsupported.rs
src/config/: diagnostics.rs  field_view.rs  field_write.rs  inventory.rs  main.rs  mod.rs  paths.rs  profile.rs  profile_compose_write.rs  profile_write.rs  schema.rs  spec.rs  template.rs  theme.rs
src/config/asr/: aliyun.rs  apple.rs  doubao.rs  instance.rs  mod.rs  options.rs  tencent.rs
src/config/diagnostics/: mod.rs  report.rs  runtime_plan.rs  scan.rs
src/config/post/: instance.rs  llm.rs  mod.rs  rule.rs  runtime.rs
src/config/template/: asr_wizard.rs  llm_wizard.rs  mod.rs  registry.rs  render.rs
src/daemon/: active_session.rs  fallback.rs  hotkey_input.rs  lock.rs  mod.rs  process.rs  resume.rs  runtime.rs  session_start.rs
src/history/: assets.rs  mod.rs  model.rs  stats.rs  store.rs  watcher.rs
src/hotkey/: bindings.rs  combo.rs  key.rs  mod.rs  parse.rs  proptests.rs  provider_darwin.rs  provider_windows.rs  suppressor.rs  tracker.rs
src/i18n/: catalog.rs  diagnostics.rs  format.rs  lang.rs  mod.rs
src/ipc/: client.rs  protocol.rs  server.rs  transport.rs
src/overlay/: animations.rs  command.rs  debug.rs  layout.rs  linux.rs  mod.rs  model.rs  renderer.rs  view.rs  windows.rs
src/overlay/macos/: chrome.rs  debug.rs  icon_fx.rs  mod.rs  view.rs
src/overlay/windows/: backend.rs  composition.rs  direct2d.rs  icons.rs  scene.rs
src/platform/: audio_capture.rs  audio_convert.rs  autotype.rs  capability.rs  clipboard.rs  daemon.rs  desktop.rs  hotkey.rs  lifecycle.rs  mod.rs  path.rs  permissions.rs  service.rs
src/platform/macos/: app_context.rs  autotype.rs  clipboard.rs  helper.rs  mod.rs  permissions.rs  window.rs
src/platform/windows/: app_context.rs  autotype.rs  clipboard.rs  mod.rs
src/post/: app_context.rs  config.rs  filler.rs  llm.rs  mod.rs  zh_filter.rs
src/state/: history.rs  mod.rs
src/tui/: audio.rs  config_actions.rs  configure.rs  history.rs  keybindings.rs  mod.rs  page.rs  panes.rs  settings.rs  status.rs  ui.rs
src/tui/configure/: doctor.rs  hit.rs  mod.rs  modal.rs  profile_composer.rs  render.rs  tests.rs
src/tui/history/: mod.rs  render.rs  tests.rs
src/tui/status/: mod.rs  render.rs  tests.rs  waveform.rs
src/voice/: apple_capture_helper.swift  apple_source.rs  audio.rs  capture.rs  consumer.rs  dispatch.rs  energy_vad.rs  engine.rs  engine_lifecycle_tests.rs  finalize.rs  finish.rs  history_build.rs  meter.rs  mod.rs  observer.rs  post_dispatch.rs  preprocess.rs  recorder.rs  resume.rs  silero.rs  silero_runtime.rs  timeline.rs  trace.rs  vad.rs  webrtc_apm.rs
tests/: apple_helper_build.rs  cli_runtime_boundary.rs  doc_consistency.rs  platform_layout.rs  theme_registry_build.rs
