[package]
name = "shuohua"
version = "0.4.0"
edition = "2021"
description = "macOS voice input assistant with realtime ASR, post-processing, overlay, and TUI"
license = "MIT"
publish = false

[[bin]]
name = "shuo"
path = "src/main.rs"

[dependencies]
anyhow          = "1"
clap            = { version = "4", features = ["derive"] }
clap_complete   = "4"
cpal            = "0.18"
flate2          = "1"
hound           = "3"
os_pipe         = "1"
tokio           = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "process"] }
tokio-util      = { version = "0.7", features = ["rt"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures-util    = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
semver          = "1"
sha2            = "0.10"
tar             = "0.4"
time            = { version = "0.3", features = ["macros", "serde-human-readable", "formatting", "local-offset"] }
toml            = "0.8"
toml_edit       = "0.22"
async-trait     = "0.1"
thiserror       = "2"
uuid            = { version = "1", features = ["v4"] }
ulid            = "1"
reqwest         = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
notify          = "8"
ratatui         = "0.30"
crossterm       = "0.29"
libc            = "0.2"
unicode-segmentation = "1.13"
voice_activity_detector = "0.2.1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time", "registry"] }
tracing-appender = "0.2"
audioadapter-buffers = "3.0.0"
rubato = "3.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics   = "0.25"
core-foundation = "0.10"
objc2           = "0.6"
objc2-app-kit   = { version = "0.3", features = [
    "NSAnimation",
    "NSAnimationContext",
    "NSApplication",
    "NSColor",
    "NSControl",
    "NSFont",
    "NSFontDescriptor",
    "NSGraphics",
    "NSImage",
    "NSImageView",
    "NSCell",
    "NSClipView",
    "NSImageCell",
    "NSPanel",
    "NSParagraphStyle",
    "NSPasteboard",
    "NSResponder",
    "NSRunningApplication",
    "NSScreen",
    "NSScrollView",
    "NSScroller",
    "NSLayoutManager",
    "NSText",
    "NSTextContainer",
    "NSTextField",
    "NSTextStorage",
    "NSTextView",
    "NSTrackingArea",
    "NSView",
    "NSVisualEffectView",
    "NSWorkspace",
    "NSWindow",
    "objc2-core-graphics",
] }
objc2-core-graphics = { version = "0.3", features = ["CGPath"] }
objc2-foundation = { version = "0.3", features = [
    "NSArray",
    "NSDate",
    "NSGeometry",
    "NSNotification",
    "NSObject",
    "NSString",
    "NSTimer",
    "NSValue",
] }
objc2-quartz-core = { version = "0.3", features = ["CAAnimation", "CAGradientLayer", "CALayer", "CAMediaTiming", "CAShapeLayer", "objc2-core-graphics"] }

[dev-dependencies]
proptest = "1"

[build-dependencies]
ferrous-opencc = { version = "0.4", default-features = false, features = ["s2t-conversion"] }
toml = "0.8"

[features]
default = []
# Development-only tools. Do not enable in release builds.
dev = []

[profile.release]
opt-level = "z"
lto       = true
strip     = true
