[package]
name = "liquid-glass-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "liquid-glass-demo"
path = "src/main.rs"

[dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSGeometry",
    "NSThread",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSResponder",
    "NSWindow",
    "NSPanel",
    "NSView",
    "NSColor",
    "NSScreen",
    "NSText",
    "NSTextField",
    "NSFont",
    "NSControl",
] }

[profile.release]
opt-level = "z"
lto = true
strip = true
