[package]
name = "shuohua-gui"
version = "0.1.2"
edition = "2021"
publish = false

[lib]
name = "shuohua_gui"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shuohua = { path = ".." }
tauri = { version = "2", features = [] }
